--- a/styles/web.css
+++ b/styles/web.css
@@ -134,3 +134,69 @@ nav{
     color: grey;
 }
 
+/* review */
+.review-main{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+.review11{
+    width: 600px;
+}
+.review-main h1{
+    text-align: center;
+    margin-bottom: 60px;
+    font-size: 30px;
+}
+.review11{
+    background-color: white;
+    border-radius: 10px;
+    margin-left: 10px;
+    padding: 10px 5px;
+}
+.review1{
+    width: 678px;
+    display: flex;
+    justify-content: space-around;
+    
+}
+.rev0{
+    height: 10px;
+    margin-bottom: 0px;
+}
+.review11 h4{
+    font-size: 18px;
+    margin: 0px 5px;
+}
+.review11 p{
+    font-size: 10px;
+    margin: 5px;
+    color: grey;
+    padding: 0px 20px 0px 0px;
+}
+.review11-img{
+    display: flex;
+    
+}
+.rv h5{
+    margin: 5px;
+    padding: 0px;
+    color: #2B2929;
+    font-weight: 100;
+}
+.rv p{
+    margin: 5px;
+    padding: 0px;
+    color: grey;
+}
+.rev1-img1{
+    border-radius: 50%;
+    height: 30px;
+    margin-top: 10px;
+}
+.review11:hover{
+    box-shadow: 8px 5px 2px #EEEEEE;
+    background-color: #EEEEEE;
+    transition: 0.5s;
+}
