--- a/styles/web.css
+++ b/styles/web.css
@@ -200,3 +200,42 @@ nav{
     background-color: #EEEEEE;
     transition: 0.5s;
 }
+
+/* focus */
+.focus-main{
+    display: flex;
+    justify-content: center;
+}
+
+.focus{
+    background-color: white;
+    text-align: center;
+    padding: 30px 50px;
+    width: 580px;
+    margin: 20px 40px; 
+    border-radius: 20px;
+}
+
+.focus h1{
+    font-size: 40px;
+    margin-bottom: 10px;
+    margin-top: none;
+}
+
+.focus p{
+    font-size: 12px;
+    margin: 10px;
+    color: gray;
+}
+
+.foc{
+    text-align: center;
+    padding: 10px 25px;
+    margin-bottom: 20px;
+}
+
+.focus-image{
+    height: 220px;
+    width: 500px;
+    border-radius: 20px;
+}
