--- a/styles/web.css
+++ b/styles/web.css
@@ -239,3 +239,43 @@ nav{
     width: 500px;
     border-radius: 20px;
 }
+
+/* contact */
+.contact-main{
+    display: flex;
+    justify-content: center;
+}
+.cnt{
+    display: flex;
+    justify-content: space-between;
+    width: 700px;
+    padding: 60px 30px;
+}
+.contact input{
+    margin: 10px;
+}
+.cnt-h h1{
+    font-size: 50px;
+}
+.con1{
+    height: 40px;
+    border: none;
+    width: 300px;
+    margin: 0px;
+    border-radius: 5px;
+}
+.con2{
+    height: 100px;
+    border: none;
+    width: 300px;
+    border-radius: 5px;
+}
+.cnt0{
+    height: 40px;
+    width: 300px;
+    margin-top: 10px;
+}
+
+textarea{
+    resize: none;
+}
