--- a/styles/web.css
+++ b/styles/web.css
@@ -279,3 +279,34 @@ nav{
 textarea{
     resize: none;
 }
+
+/* footer */
+.footer-main{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background-color: white;
+    width: 100%;
+    padding-bottom: 50px;
+    padding-top: 15px;
+}
+.footer-main h1{
+    margin: 0px;
+    padding: 20px;
+}
+.footer-main p{
+    margin: 10px auto;
+    font-size: 10px;
+    color: gray;
+    width: 300px;
+}
+.link a{
+    color: #979292;
+    font-size: 12px;
+    margin-left: 20px;
+    text-decoration: none;
+}
+.link a:hover{
+    color: coral;
+    transition: 0.5s;
+}
