fix background image path with correct filename and quotes

--- a/styles/web.css
+++ b/styles/web.css
@@ -52,7 +52,7 @@ nav{
 
 .banner-main{
     height: 400px;
-    background-image: url(../images/Assets/Hero-bg.png);
+    background-image: url("../images/Assets/Hero-bg.png");
     padding: 30px 50px;
     text-align: center;
     
